--- a/src/tand/Tand.Extensions.DependencyInjection/Tand.Extensions.DependencyInjection.csproj
+++ b/src/tand/Tand.Extensions.DependencyInjection/Tand.Extensions.DependencyInjection.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <PackageId>Tand.Extensions.DependencyInjection</PackageId>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <Version>0.0.1</Version>
+        <RepositoryUrl>https://github.com/baez90/tand</RepositoryUrl>
+        <LangVersion>8</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
