--- a/src/Tand.Core/Tand.Core.csproj
+++ b/src/Tand.Core/Tand.Core.csproj
@@ -7,6 +7,7 @@
     <Version>0.0.1</Version>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
 </Project>
