--- a/test/Tand.Core.Tests/Tand.Core.Tests.csproj
+++ b/test/Tand.Core.Tests/Tand.Core.Tests.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Tand.Core\Tand.Core.csproj" />
+      <ProjectReference Include="..\..\src\Tand.Core\Tand.Core.csproj" />
     </ItemGroup>
 
 </Project>
